<resources>
    <string name="app_name">QmartApp</string>
    <string name="welcome">Добро пожаловать</string>
    <string name="welcome2">The best and healthy food store</string>
    <string name="skip">Пропустить</string>
    <string name="qmart">qmart</string>
    <string name="btn_first">Начать сейчас</string>
    <string name="sign_in">Создать новый аккаунт</string>
    <string name="sign_in2">Создать аккаунт</string>
    <string name="log_in">Войти</string>
    <string name="Hello">Здравствуйте</string>
    <string name="info">Электронная почта или телефон</string>
    <string name="forget_pass">Забыли пароль?</string>
    <string name="password">Пароль</string>
    <string name="email">Email</string>
    <string name="name">Имя</string>
    <string name="reg">Регистрация</string>
    <string name="info2">Заполните свои данные</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="search">Search</string>
    <string name="Sale">Скидочные товары</string>
    <string name="favourite">Избранное</string>
    <string name="basket">Корзина</string>
    <string name="sign_up">Войти</string>
    <string name="sign_up2">Есть аккаунт?</string>
    <string name="name_profile">Имя</string>
    <string name="help">Продолжить с помощью</string>
    <string name="new_user">Новый пользователь?</string>
    <string name="create_user">Создать аккаунт</string>
    <string name="profil">Привет, Асель!</string>
    <string name="profil_info">Мой данные</string>

    <string name="home">Home</string>
    <string name="baskets">Basket</string>
    <string name="favourites">Favourites</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>